# datainterpretation

./: .gitignore  diamonds_solutions.ipynb  probabilistic_modelling.ipynb  pyproject.toml  stats.ipynb
data/processed/: linear.csv  quadratic.csv  sine.csv
extra/: sklearn_modelling.ipynb
reports/: distributions.qmd
src/: main.py  make_data.py  preprocess.py  settings.py  stats.py  visualization.py
