[tool.poetry]
name = "datainterpretation"
version = "0.1.0"
description = ""
authors = ["raoul.grouls@businessdecision.nl"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9"
pandas = "^1.4.4"
numpy = "^1.23.3"
scipy = "^1.9.1"
matplotlib = "^3.5.3"
seaborn = "^0.12.0"
polars = "^0.14.10"
click = "^8.1.3"
pydantic = "^1.10.2"
loguru = "^0.6.0"
plotly-express = "^0.4.1"
quarto = "^0.1.0"
pyarrow = "^9.0.0"
fitter = "^1.5.1"
scikit-learn = "^1.1.2"
pymc = "~4.2.0"
arviz = "^0.12.1"


[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
jupyter = "^1.0.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
